# LITTLECCOMPILER

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
inc/: CMakeLists.txt
inc/MyLib/: compiler.h  dummy.h
inc/helpers/: CMakeLists.txt  buffer.h
src/: CMakeLists.txt
src/MyLib/: CMakeLists.txt  compiler.c  cprocess.c  dummy.c  lex_process.c  lexer.c
src/helpers/: CMakeLists.txt
